<resources>
    <string name="app_name">KanjiApp</string>
    <string name="TitleText">Kanji Learning App</string>
    <string name="TitleButton">Click me to retrieve data!</string>
    <string name="ScrollviewDescription">Kanji Data</string>
    <string name="kanji">来</string>
    <string name="onyomi">on reading of kanji</string>
    <string name="kunyomi">kun reading of kanji</string>
    <string name="meaning">english meaning of kanji</string>
    <string name="example_sentence">This is an example sentence containing this kanji.</string>
    <string name="word_view">These are some words containing that character.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_start_menu">fragment_start_menu</string>
    <string name="kanji_list_view">kanji_list_view</string>
    <string name="kanji_list_view_text">Kanji List View!</string>
    <string name="start_menu">Start menu!</string>
    <string name="kanji_grid_element_meaning">meaning</string>
    <string name="category_name">category name</string>
    <string name="categories_jlpt">Jlpt</string>
    <string name="categories_grade">Grade</string>
    <string name="custom_sets">Custom sets</string>
    <string name="word_header_text">Words:</string>
    <string name="example_sentence_text">Example sentence:</string>
    <string name="app_label">search</string>
    <string name="button_learn">learn!</string>
    <string name="questionNumber">1/10</string>
    <string name="button_check_answer">Check</string>
    <string name="questionType">Type on reading of kanji:</string>
    <string name="stats1">Congrats! You answered %1$d questions out of %2$d correctly</string>
</resources>