<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startMenu">

    <fragment
        android:id="@+id/CategoryList"
        android:name="pl.polsl.kanjiapp.views.CategoryList"
        android:label="@string/fragment_start_menu"
        tools:layout="@layout/fragment_category_list" >
        <action
            android:id="@+id/action_startMenu_to_kanjiListView"
            app:destination="@id/kanjiListView" />
    </fragment>
    <fragment
        android:id="@+id/kanjiListView"
        android:name="pl.polsl.kanjiapp.views.KanjiListView"
        android:label="@string/kanji_list_view"
        tools:layout="@layout/fragment_kanji_list_view" >
        <action
            android:id="@+id/action_kanjiListView_to_singleKanjiView"
            app:destination="@id/singleKanjiView" >
            <argument
                android:name="@string/kanji"
                android:defaultValue="来" />
        </action>
        <action
            android:id="@+id/action_kanjiListView_to_learnOptions"
            app:destination="@id/learnOptions" />
    </fragment>
    <fragment
        android:id="@+id/singleKanjiView"
        android:name="pl.polsl.kanjiapp.views.SingleKanjiView"
        android:label="fragment_single_kanji_view"
        tools:layout="@layout/fragment_single_kanji_view" >
        <argument
            android:name="@string/kanji"
            app:argType="string"
            android:defaultValue="来" />
    </fragment>
    <fragment
        android:id="@+id/learnOptions"
        android:name="pl.polsl.kanjiapp.views.LearnOptions"
        android:label="fragment_learn_options"
        tools:layout="@layout/fragment_learn_options" >
        <action
            android:id="@+id/action_learnOptions_to_learn"
            app:destination="@id/learn" />
    </fragment>
    <fragment
        android:id="@+id/learn"
        android:name="pl.polsl.kanjiapp.views.Learn"
        android:label="fragment_learn"
        tools:layout="@layout/fragment_learn" >
        <action
            android:id="@+id/action_learn_to_learningStats"
            app:destination="@id/learningStats" />
    </fragment>
    <fragment
        android:id="@+id/learningStats"
        android:name="pl.polsl.kanjiapp.views.LearningStats"
        android:label="fragment_learning_stats"
        tools:layout="@layout/fragment_learning_stats" />
    <fragment
        android:id="@+id/register"
        android:name="pl.polsl.kanjiapp.views.Register"
        android:label="fragment_login"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/login" />
    </fragment>
    <fragment
        android:id="@+id/login"
        android:name="pl.polsl.kanjiapp.views.Login"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_login_to_category_list"
            app:destination="@id/CategoryList" />
    </fragment>
    <fragment
        android:id="@+id/startMenu"
        android:name="pl.polsl.kanjiapp.views.StartMenu"
        android:label="fragment_start_menu"
        tools:layout="@layout/fragment_start_menu" >
        <action
            android:id="@+id/action_startMenu_to_register"
            app:destination="@id/register" />
        <action
            android:id="@+id/action_startMenu_to_login"
            app:destination="@id/login" />
        <action
            android:id="@+id/action_startMenu_to_CategoryList"
            app:destination="@id/CategoryList" />
    </fragment>
    <fragment
        android:id="@+id/createNewSet"
        android:name="pl.polsl.kanjiapp.views.CreateNewSet"
        android:label="fragment_create_new_set"
        tools:layout="@layout/fragment_create_new_set" />
</navigation>